[gd_scene load_steps=14 format=3 uid="uid://b6woywf0dd7k"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_xgg61"]
[ext_resource type="Texture2D" uid="uid://dlo6klhfieil3" path="res://assets/orange_cat.png" id="2_xpbov"]
[ext_resource type="Texture2D" uid="uid://d1q17bw8k34p2" path="res://assets/art_cat.png" id="3_nnuop"]
[ext_resource type="Script" path="res://scripts/art_cat.gd" id="4_wbtxb"]
[ext_resource type="Texture2D" uid="uid://c5wgbevjk577m" path="res://assets/beige_cat.png" id="5_jsayk"]
[ext_resource type="Script" path="res://scripts/beige_cat.gd" id="6_1meh7"]
[ext_resource type="Texture2D" uid="uid://cxbhfwdj38ykd" path="res://assets/black_cat.png" id="7_l8ice"]
[ext_resource type="Script" path="res://scripts/black_cat.gd" id="8_1ywd3"]
[ext_resource type="Texture2D" uid="uid://gknc048omnfh" path="res://assets/brown_cat.png" id="9_wkl06"]
[ext_resource type="Script" path="res://scripts/brown_cat.gd" id="10_f5ue6"]
[ext_resource type="Texture2D" uid="uid://d153x0x26ieue" path="res://assets/scared_cat.png" id="11_r6n2m"]
[ext_resource type="Script" path="res://scripts/scared_cat.gd" id="12_ydtyp"]
[ext_resource type="Texture2D" uid="uid://c3xa0svl3q82g" path="res://assets/shop.png" id="13_l3sny"]

[node name="main" type="Node2D"]
script = ExtResource("1_xgg61")

[node name="Label" type="Label" parent="."]
offset_left = 21.0
offset_top = 21.0
offset_right = 202.0
offset_bottom = 76.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "Meows: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OrangeCat" type="TextureButton" parent="."]
offset_left = 490.0
offset_top = 226.0
offset_right = 640.0
offset_bottom = 464.0
size_flags_horizontal = 4

[node name="OrangeCat" type="Sprite2D" parent="OrangeCat"]
position = Vector2(83, 117)
scale = Vector2(0.125, 0.125)
texture = ExtResource("2_xpbov")

[node name="ArtCat" type="Sprite2D" parent="."]
position = Vector2(398, 198)
scale = Vector2(0.05, 0.05)
texture = ExtResource("3_nnuop")
script = ExtResource("4_wbtxb")

[node name="BeigeCat" type="Sprite2D" parent="."]
position = Vector2(250, 160)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_jsayk")
script = ExtResource("6_1meh7")

[node name="BlackCat" type="Sprite2D" parent="."]
position = Vector2(707, 159)
scale = Vector2(0.07, 0.07)
texture = ExtResource("7_l8ice")
script = ExtResource("8_1ywd3")

[node name="BrownCat" type="Sprite2D" parent="."]
position = Vector2(781, 238)
scale = Vector2(0.07, 0.07)
texture = ExtResource("9_wkl06")
script = ExtResource("10_f5ue6")

[node name="ScaredCat" type="Sprite2D" parent="."]
position = Vector2(303, 301)
scale = Vector2(0.08, 0.08)
texture = ExtResource("11_r6n2m")
script = ExtResource("12_ydtyp")

[node name="Shop" type="TextureButton" parent="."]
offset_left = 549.0
offset_top = 523.0
offset_right = 651.0
offset_bottom = 626.0

[node name="Shop" type="Sprite2D" parent="Shop"]
position = Vector2(52, 52)
scale = Vector2(0.05, 0.05)
texture = ExtResource("13_l3sny")

[connection signal="pressed" from="OrangeCat" to="." method="_on_orange_cat_pressed"]
[connection signal="increase_meow" from="ArtCat" to="." method="_on_art_cat_increase_meow"]
[connection signal="increase_meow" from="BeigeCat" to="." method="_on_beige_cat_increase_meow"]
[connection signal="increase_meow" from="BlackCat" to="." method="_on_black_cat_increase_meow"]
[connection signal="increase_meow" from="BrownCat" to="." method="_on_brown_cat_increase_meow"]
